--- a/.github/workflows/docker_build.yaml
+++ b/.github/workflows/docker_build.yaml
@@ -30,7 +30,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: docker.pkg.github.com
-        repository: jsfillman/narrative
+        repository: jsfillman/narrative/narrative
         tags: ${{ env.NARRATIVE_VERSION_NUM }} 
         tag_with_ref: true
         tag_with_sha: true
