--- a/.github/workflows/docker_build.yaml
+++ b/.github/workflows/docker_build.yaml
@@ -31,6 +31,6 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: docker.pkg.github.com
         repository: jsfillman/narrative/narrative
-        tags: ${{ env.NARRATIVE_VERSION_NUM }} 
+        tags: ${{ env.NARRATIVE_VERSION_NUM }},testing 
         tag_with_ref: true
         tag_with_sha: true
