--- a/.github/workflows/docker_tags.yml
+++ b/.github/workflows/docker_tags.yml
@@ -18,14 +18,14 @@ jobs:
     - name: Set up test environment
       if: "!contains(github.event.head_commit.message, 'skip ci')"
       shell: bash
-      env:
-        SHA: ${{ GITHUB_SHA }}
-        REF: ${{ GITHUB_REF }}
+      # env:
+      #   SHA: ${{ GITHUB_SHA }}
+      #   REF: ${{ GITHUB_REF }}
       run: |
         export GIT_SHA=$(git rev-parse --short=7 HEAD)
         echo $GIT_SHA
-        echo $SHA
-        echo $REF
+        echo ${GITHUB_SHA}
+        echo $${GITHUB_REF}
 
     # - name: Retrieve version
     #   run: |
